docs: Add comprehensive @ApiResponses annotations for production-ready API